# live-ninja

./: .gitignore  .golangci.yml  CLAUDE.md  Makefile  PRD.md  SETUP.md  agents.md  android-revamp-plan.md  backlog.md  base-knowledge-plan.md  defects-and-improvements.md  deploy.md  gemini-plan.md  go.mod  go.sum  plan.md  samconfig.toml  template.yaml  tool-parity-plan.md
.github/workflows/: android-release.yml  deploy.yml
.playwright-mcp/: page-2026-07-18T01-31-35-177Z.yml  page-2026-07-18T01-33-21-902Z.yml  page-2026-07-18T01-33-33-380Z.yml  page-2026-07-18T01-33-42-873Z.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
archive/: android-revamp-plan.md  base-knowledge-plan.md  gemini-plan.md  plan.md  tool-parity-plan.md
cmd/account-purge/: main.go  main_test.go
cmd/authorizer/: main.go  main_test.go
cmd/deliverables-zipper/: main.go
cmd/email-dispatch/: main.go
cmd/iot-ingest/: main.go
cmd/nova-bridge/: bridge.go  bridge_test.go  main.go  nova_stream.go  session_auth_test.go  sink.go  ws.go  ws_test.go
cmd/realtime-broker/: gemini_test.go  main.go  main_test.go
cmd/shadow-ingest/: main.go  main_test.go
cmd/topics-extract/: main.go  main_test.go
cmd/usage-rollup/: main.go
cmd/web/: main.go
comparisons/: mermaid-validity.txt
comparisons/codex/: plan.md  prd.md
comparisons/grok/: plan.md  prd.md  prompt.md
containers/nova-bridge/: Dockerfile
containers/wakeword-train/: Dockerfile  README.md  negative_phrases.txt  requirements.txt  train.py
contracts/: README.md  api.md  headers.md  metering.md  settings.schema.json  shadow.md  telemetry.schema.json  wakeword-manifest.md
docs/: agentic-expansion-review.md  agentic-expansion-suggestions.md  qa-report.md  runbook.md  voice-engines.md  web-ui-spec.md
firmware/: .gitignore  CMakeLists.txt  partitions_ota.csv  sdkconfig.defaults
firmware/components/ln_iot/: CMakeLists.txt  Kconfig  README.md
firmware/components/ln_iot/include/: ln_iot.h
firmware/components/ln_iot/src/: ln_iot.c  ln_iot_nvs.c  ln_iot_ota.c  ln_iot_priv.h  ln_iot_provision.c  ln_iot_root_ca.c  ln_iot_shadow.c
firmware/components/ln_net/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/components/ln_net/include/: ln_net.h
firmware/components/ln_net/portal/: portal.html
firmware/components/ln_net/src/: ln_auth.c  ln_backend.c  ln_dns.c  ln_net.c  ln_net_priv.h  ln_pairing.c  ln_portal.c
firmware/components/ln_ui/: CMakeLists.txt  idf_component.yml  ln_events.c  ln_ui.c  ln_ui_internal.h  ln_ui_scr_config.c  ln_ui_scr_error.c  ln_ui_scr_idle.c  ln_ui_scr_onboarding.c  ln_ui_scr_session.c  ln_ui_widgets.c
firmware/components/ln_ui/include/: ln_events.h  ln_ui.h
firmware/main/: CMakeLists.txt  app_main.c  idf_component.yml  ln_ctrl.c  ln_ctrl.h
internal/auth/: access.go  access_test.go  device.go  device_test.go  jwks.go  lwa.go  lwa_test.go  refresh.go  session.go  session_test.go
internal/config/: config.go
internal/deliv/: deliv.go  deliv_test.go  (+2 more)
mockups/: index.html
scripts/: set-secret.bat  set-secret.cmd  set-secret.sh  setup-live-ninja-secrets.bat
web/: embed.go  sw.js
(+343 files in other folders)
